--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@mui/x-date-pickers": "^8.17.0",
+    "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
     "formik": "^2.4.6",
